--- a/project/templates/pages/rsvp.html
+++ b/project/templates/pages/rsvp.html
@@ -25,12 +25,12 @@
 									</div>
 								</label>
 								<div class="error">
-									<p>You shaaallll not pass!</p>
+									<p>There should be a code on your wedding invitation!</p>
 								</div>
 								<input name="code" type="text" placeholder="Enter Code" />
 							</li>
 							<li>
-								<sup>?</sup>
+								<!-- <sup>?</sup> -->
 								<label class="">
 									<div>
 										<div class="line two"></div>
@@ -39,12 +39,12 @@
 									</div>
 								</label>
 								<div class="error">
-									<p>Uh... Who are you Voldemort?</p>
+									<p>Yo. for reals, what's ur name?</p>
 								</div>
 								<input name="name" type="text" placeholder="What's Your Name?" />
 							</li>
 							<li>
-								<sup>?</sup>
+								<!-- <sup>?</sup> -->
 								<label class="">
 									<div>
 										<div class="line one"></div>
@@ -67,6 +67,15 @@
 									<div class="radio"></div>
 								</div>
 							</li>
+							<!-- 
+							<li class="radios">
+								<label></label>
+								<div>
+									<input type="checkbox" name="rehearsal"/>
+									<span>CHeck here if you <strong>ARE</strong> coming to the rehearsal dinner</span>
+									<div class="checkbox"></div>
+								</div>
+							</li> -->
 							<li>
 								<label>Leave us a message!</label>
 								<div class="error">
