--- a/project/templates/pages/story.html
+++ b/project/templates/pages/story.html
@@ -32,7 +32,7 @@
 							<small>women think that the first kiss will tell them everything they need to know about a relationship</small>
 						</figcaption>
 					</figure>
-					<p>Nikki and Christian spent their first date playing scrabble and dancing to oldies at Mel's Diner where they had their first kiss while dancing to The Beatles (no one else was dancing... or kissing for that matter).  They officially started dating September 27th, 2009 and their "secret" romance was unearthed at work as witnesses reportedly "saw Harden making out with Shum in the parking lot."</p>
+					<p>Nikki and Christian spent their first date playing Scrabble and dancing to oldies at Mel's Diner, where they had their first kiss while dancing to The Beatles (no one else was dancing... or kissing for that matter).  They officially started dating September 27th, 2009 and their "secret" romance was unearthed at work as witnesses reportedly "saw Harden making out with Shum in the parking lot."</p>
 				</article>
 
 				<article class="stat engagement">
@@ -45,7 +45,7 @@
 							<small>57,000 couples married on 11/11/11 and at least one couple got engaged...</small>
 						</figcaption>
 					</figure>
-					<p>Nikki and Christian both have alarms on their phones set to 11:11AM/PM; and almost every day they remind each other to "Make a Wish!". According to superstition you can't tell anyone what you wish for, but on 11-11-11 it was pretty obvious what Christian had been wishing for these last two years: he proposed to Nikki on their Friday morning run by the LA River with "The World's Longest Love Letter - 1/4 Mile" written in chalk on the sidewalk.  Nikki said "Yes!" and then demanded to run to the beginning of the love-letter to replay the proposal from the top.</p>
+					<p>Nikki and Christian both have alarms on their phones set to 11:11AM/PM, and almost every day they remind each other to "Make a Wish!" According to superstition, you can't tell anyone what you wish for, but on 11-11-11 it was pretty obvious what Christian had been wishing for the last couple of years.  He proposed to Nikki on their Friday morning run by the LA River with "The World's Longest Love Letter" written in chalk on the sidewalk.  Nikki said "Yes!" and then demanded to run to the beginning of the love letter to replay the proposal from the top.</p>
 				</article>
 
 				
