--- a/project/templates/pages/wedding.html
+++ b/project/templates/pages/wedding.html
@@ -3,7 +3,6 @@
 		<div class="backing tilt-right"><div></div></div>
 	</div>
 	<div class="content">
-		<div class="drinks-top"></div>
 		<div class="drinks"></div>
 		<div class="info">
 
@@ -11,7 +10,9 @@
 
 			<article class="stat weddings">
 				<figure>
-					<div></div>
+					<div>
+						<img src="{{ STATIC_URL }}img/wedding/stat.png" alt="# of weddings"/>
+					</div>
 					<figcaption>
 						<small>Number of weddings attended as a couple:</small>
 						<strong>7</strong>
@@ -25,14 +26,14 @@
 						<img class="heart" src="{{ STATIC_URL }}img/wedding/marker.png" alt="Map marker" />
 					</div>
 					<figcaption>
-						<strong>Calamigos Ranch, Malibu CA.</strong>
+						<strong>Calamigos Ranch, Malibu CA</strong>
 						<small>4:30 PM <br/>August 10th, 2012</small>
 					</figcaption>
 				</figure>
 				<p>Secluded just outside of the Los Angeles area, nestled among the Santa Monica Mountains, Calamigos Ranch is one of Malibu’s best kept secrets! Rich with California heritage, Calamigos Ranch boasts picturesque views with over 130 acres of beautifully landscaped grounds. Soothing waterfalls, rolling green meadows, and views from the City to the Sea, Calamigos Ranch is the most visually stunning special event location in the Malibu Wine Country.</p>
 
-				<a class="directions" title="Get Directions" href="">get directions</a>
-				<a class="website" title="Calamigos Ranch Website" href="">website</a>
+				<a class="directions" title="Get Directions" href="https://maps.google.com/maps/ms?hl=en&ie=UTF8&msa=0&msid=216379673372689199621.00045d0629c9d63ca2fc8&s=AARTsJpRiBs_O-AGXLElLGltpU4V0ATJ1g&t=m&vpsrc=0&f=d&daddr=Calamigos+Ranch+%4034.095636,-118.816366&ll=34.154432,-118.816452&spn=0.272744,0.439453&iwloc=00045d062c846f638ab50&source=embed" target="_blank">get directions</a>
+				<a class="website" href="http://www.calamigos.com/services/wedding/the-garden-patio" target="_blank" title="Calamigos Ranch Website" href="">website</a>
 			</article> 
 
 
